[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["jueon <jueonpk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
PyMySQL = "^1.0.2"
PyJWT = "^2.6.0"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
